[package]
name = "open-graph"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-net-web/open-graph"
documentation = "https://docs.rs/open-graph"
description = "Generate HTML for Open Graph integration."
keywords = ["facebook", "linkedin", "social", "opengraph", "meta"]
categories = ["template-engine", "value-formatting", "web-programming", "web-programming::http-server"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
failure = "0.1.5"
url = "1.7.2"

[dev-dependencies]
